mas o menos pantalla de opcion facil terminada

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="play">Play</string>
     <string name="worlds">Worlds</string>
     <string name="tutorial">Tutorial</string>
+    <string name="next_car">Next Car</string>
 
 </resources>
