--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="worlds">Worlds</string>
     <string name="tutorial">Tutorial</string>
     <string name="next_car">Next Car</string>
+    
+    <string name="div">2</string>
 
 </resources>
