--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="worlds">Worlds</string>
     <string name="tutorial">Tutorial</string>
     <string name="next_car">Next Car</string>
+    <string name="prev_car">Prev Car</string>
     <string name="stats">Stats</string>
     <string name="awards">Awards</string>
     <string name="stamps">Stamps</string>
@@ -18,4 +19,5 @@
     <string name="europe_subworld">Europe</string>
     <string name="asia_subworld">Asia</string>
     <string name="all_subworld">All</string>
+    <string name="garage">Garage</string>
 </resources>
